# AviSynth-SangNom2

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
msvc/: SangNom2.sln  SangNom2.vcxproj
src/: SangNom2.cpp  SangNom2.h  SangNom2.rc  SangNom2_SSE2.cpp
